ui: fixed sidebar cropping

--- a/frontend/nextcp-ui/src/app/view/sidebar/sidebar.component.scss
+++ b/frontend/nextcp-ui/src/app/view/sidebar/sidebar.component.scss
@@ -114,6 +114,7 @@ a {
     display       : flex;
     flex-direction: column;
     margin-left   : 0.5rem;
+    margin-bottom : 100px;
 }
 
 .myRouterLinkSection {
